[package]
name = "unzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.13"
indicatif = "0.16"
futures = "0.3"
async-std = {version = "1", features = ["attributes"]}
human_bytes = { version = "0.3", features = ["fast"] }
clap = { version = "3", features = ["std", "color", "suggestions", "cargo"] }

[profile.release]
panic = 'abort'
lto = 'fat'
codegen-units = 1
